--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
     { "source": "/valor", "destination": "/redirects/valor.lua" }
+    { "source": "/wm", "destination": "/redirects/wm.lua" }
   ]
 }
