Add new rewrites for loader and autofarm

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "rewrites": [
     { "source": "/valor", "destination": "/redirects/valor.lua" },
     { "source": "/wm", "destination": "/redirects/wm.lua" },
-    {"source": "/loader", "destination": "/redirects/loader.lua"}
+    {"source": "/loader", "destination": "/redirects/loader.lua"},
+    {"source": "/autofarm", "destination": "/redirects/autofarm.lua"},
   ]
 }
